--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "accessible-astro-starter",
-  "description": "An Accessible Starter Theme for Astro including several accessibility features and tools to help you build faster.",
+  "name": "web24-nimo-network",
+  "description": "Docs and slides for NIMO2401 Introudction to Web Development course",
   "version": "3.1.2",
-  "author": "Mark Teekman",
-  "homepage": "https://accessible-astro.netlify.app/",
+  "author": "truc0",
+  "homepage": "https://web24.nimo.network/",
   "scripts": {
     "dev": "astro dev",
     "start": "astro dev",
