--- a/package.json
+++ b/package.json
@@ -32,5 +32,8 @@
     "sass": "^1.49.9",
     "svgo": "^3.2.0",
     "tailwindcss": "^3.2.7"
+  },
+  "dependencies": {
+    "@astrojs/markdown-remark": "^5.0.0"
   }
 }
