--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "dev": "astro dev",
     "start": "astro dev",
     "build": "astro build",
-    "preview": "astro preview"
+    "preview": "astro preview",
+    "sli:dev": "slidev",
+    "sli:build": "node build-slides.js",
+    "build-all": "pnpm run build && pnpm run sli:build"
   },
   "devDependencies": {
     "@astrojs/mdx": "^2.0.2",
@@ -26,6 +29,7 @@
     "eslint": "^8.33.0",
     "eslint-plugin-astro": "^0.23.0",
     "eslint-plugin-jsx-a11y": "^6.7.1",
+    "playwright-chromium": "^1.43.0",
     "prettier": "^2.8.3",
     "prettier-plugin-astro": "^0.8.0",
     "prettier-plugin-tailwindcss": "^0.2.2",
@@ -34,6 +38,9 @@
     "tailwindcss": "^3.2.7"
   },
   "dependencies": {
-    "@astrojs/markdown-remark": "^5.0.0"
+    "@astrojs/markdown-remark": "^5.0.0",
+    "@slidev/cli": "^0.48.8",
+    "@slidev/theme-default": "^0.25.0",
+    "@slidev/theme-seriph": "^0.25.0"
   }
 }
